# paudio

./: .gitignore  CMakeLists.txt  DEPLOY.md  README.md
.github/workflows/: ci.yml  pages.yml  release.yml
apps/server/: main.cpp
deploy/: cloudflared.example.yml
include/pocket_audio/capture/: mac_system_capture.hpp  system_capture.hpp  win_system_capture.hpp
include/pocket_audio/config/: network_config.hpp
include/pocket_audio/core/: audio_chunk.hpp  format.hpp
include/pocket_audio/network/: socket_transport.hpp
scripts/: install-logon-task.ps1  local-dev.py  local-dev.sh  run-server-task.ps1  status-logon-task.ps1  uninstall-logon-task.ps1
server/: main.cpp  server_loop.cpp  server_loop.hpp
server/capture/: mac_system_capture.hpp  mac_system_capture.mm  system_capture.cpp  system_capture.hpp  win_system_capture.cpp  win_system_capture.hpp
server/core/: audio_chunk.hpp  chunk_emit.hpp  config.hpp  format.hpp
server/network/: socket_transport.cpp  socket_transport.hpp
server/platform/: win_service.cpp  win_service.hpp
src/capture/: mac_system_capture.mm  system_capture.cpp  win_system_capture.cpp
src/network/: socket_transport.cpp
web/: config.example.js  config.js  format.js  index.html  manifest.json  player.js  processor.js
